/*
 * $Id: ChangeLog,v 1.2967 2004/05/21 02:31:39 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-05-21 07:05 UTC-0400 Sylvain Robert <s.robert/at/videotron.ca>
  * xharbour/contrib/mysql/makefile.vc
    * minor correction

2004-05-21 04:25 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/make_tgz.sh
  * xharbour/xharbour.spec
  * xharbour/utils/xbscript/Makefile
  - xharbour/ppclass.ch
    * updated for recent Ron changes: pp->xbscript

2004-05-20 17:02 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/rtl/errorsys.prg
    * Use plain Alert() if MaxCol() is 0 - so that error is always reported.

2004-03-20 23:30 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbf1.c
    + added DBI_ISFLOCK to DBINFO()
    * casting

2004-05-20 14:07 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  -  tests/pp.prg
  -  tests/pp.txt
  -  tests/pp_harb.ch
  -  tests/ppclass.prg
  -  tests/pptest.prg
  -  tests/prgscrpt.prg
  -  tests/rp_dot.src
  -  tests/rp_run.src
  + utils/xbscript/Makefile
  + utils/xbscript/prgscrpt.prg
  + utils/xbscript/rp_dot.src
  + utils/xbscript/rp_run.src
  + utils/xbscript/xbs_harb.ch
  + utils/xbscript/xbsclass.ch
  + utils/xbscript/xbscript.prg
  + utils/xbscript/xbscript.txt
  + utils/xbscript/xbstest.prg
    -+ Moved pp to utils as xbscript and xprompt

  + utils/xprompt/readme.txt
    + New empty folder with just a text file directing to utils\xbscript

  + bin/xprompt.bat
  + bin/xprompt.sh
    + New startup file to serve as a fake front and redirect to xbscript.exe
      ( please test .sh as I only guessed usages.)

  * utils/Makefile
  * makefile.bc
  * makefile.nt
  * makefile.vc
  * bin/!pack_src.bat
  * bin/pack_src.sh
    + Added support for utils\xbscript

  * source/rtl/cstruct.prg
  * source/rtl/str2ptr.c